# lie-detector

./: .gcloudignore  .gitignore  README.md  cleanup_and_count_samples.py  convert_raw_data.py  count_samples.py  create_chat_format_dataset.py  create_individual_task_dirs.py  create_offpolicy_dirs.py  demo_sandbagging.py  extract_model_traces.py  load_mask_dataset.py  parse_games.ipynb  parse_logs_mask.ipynb  parse_logs_self_sycophancy.ipynb  parse_logs_sycophancy.ipynb  prepare_together_training.py  print_all_tasks.py  print_n_mask_rows.py  process_existing_data.py  process_s3_categories.py  pyproject.toml  read_logs.py  read_logs_masked.py  read_logs_self_sycophancy.py  read_logs_ss.py  read_logs_sycophancy.py  read_parsed_logs.ipynb  requirements.txt  run2.py  run_cleanup_sample_id.py  run_test_simple.py  ss_parsing.ipynb  sync_s3_data.py  test_consistency_scorer.py  test_contrastive.py  test_cot_hook.py  test_cot_unfaithfulness.py  test_elicitation_classifier.py  test_sandbagging_setup.py  (+1 more)
.hackathon/: .gitignore  README.md
baseline/: __init__.py  calculate_generalization_std.py  count_organized_samples.py  create_generalization_csvs.py  create_sorted_csvs.py  dataset.py  evaluate.py  generate_complete_analysis.py  organized_samples_analysis.json  plot_categories.py  plot_generalization_results.py  run.py  run_baseline.py  run_gemma.py  scorer.py  task.py
baseline_new/: calculate_gt_metrics_v2.py  calculate_gt_metrics_v2_clean.py  clear_results.sh  dataset.py  debug_evaluation.py  debug_last_message.py  debug_sample_structure.py  evaluate.py  plot_baseline_accuracy.py  plot_baselines.py  plot_data_yields.py  reorganize_categories.py  run.py  run_gemma.py  run_gt_labelling.py  run_oss120b_simple.py  scorer.py  task.py  test_api_keys.py  test_correct_model.py  test_model_access.py  test_multiple_api_keys.py  test_openrouter_keys.py  test_output_extraction.py  utils.py
bytetrash/: bytetrash.py  bytetrash_classifier.py  calculate_generalization_se.py  create_sorted_csvs.py  organize_s3_data_by_model.py  post_process_baselines_balanced_results.py  task.py  test_conversation_baseline.py  test_run_gemma.py  validate_data.py  validate_data_simple.py
common/: balance_datasets.py  cleanup_empty_files.py  detect_refusal.py  gemma3_tool_adapter.py  generalization_enums.py  generalization_mappings.py  hook.py  multi_hook.py  multi_sample_game_hook.py  organize_s3_data_by_model_boto3.py  run_cleanup_sample_id.py  s3_sample_client.py  sample_validation.py  task_category.py  utils.py  vercel_blob_client.py
data_labelling_app/: README.md  app.py  demo.py  run_app.py  test_app.py
data_viewer/: DEPLOYMENT.md  README.md  app.py  deploy.sh  gunicorn_config.py  lie-detector-viewer.service  masked_agreed_truth_samples.json  ngrok_setup.md  requirements.txt  sync_s3_data.py
dataset_creation/: unfaithful_reasoning_data.py
evals/: _registry.py  _sycophancy_tasks.py  alibi_tasks.py  capture_the_secret_tasks.py  cot_unfaithfulness_tasks.py  introspective_tasks.py  lies.py  mask_tasks.py  multistep_self_sycophancy_tasks.py  n_truths_and_a_lie_tasks.py  offpolicy_tasks.py  run_all_tasks.py  sandbagging_ascii_capability_denial_tasks.py  sandbagging_ascii_tasks.py  sandbagging_basic_tool_capability_denial_tasks.py  sandbagging_contextual_tasks.py  sandbagging_performance_degradation_chess_tasks.py  sandbagging_selective_compliance_accuracy_tasks.py  sandbagging_tasks.py  sandbagging_tool_results_tasks.py  sandbagging_tools_tasks.py  sandbagging_unethical_tool_capability_denial_tasks.py  self_sycophancy_tasks.py  selfsycophancy_code_review_tasks.py  ssyc.py  sycophancy_answer_only.py  sycophancy_tasks.py  unanswerable_claim_tasks.py
(+1132 files in other folders)
